[gd_scene load_steps=4 format=3 uid="uid://ddsixicfunc4a"]

[ext_resource type="Script" path="res://healing_tower.gd" id="1_g3lcs"]
[ext_resource type="Texture2D" uid="uid://p5sy6dumcmvf" path="res://icon.svg" id="1_vc75w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6w66q"]
radius = 96.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_g3lcs")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6w66q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.25, 0.5)
texture = ExtResource("1_vc75w")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
